# murder

./: Cargo.toml  LICENSE  README.md
migrations/: init_db.sql
src/: main.rs
templates/: healthcheck.html
